--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -19387,12 +19387,12 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul
   fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul
   nameWithType: QuestStonemaul
-- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.#ctor(Rectangle)
-  name: QuestStonemaul(Rectangle)
-  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul__ctor_Rectangle_
-  commentId: M:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.#ctor(Rectangle)
-  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.QuestStonemaul(Rectangle)
-  nameWithType: QuestStonemaul.QuestStonemaul(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.#ctor
+  name: QuestStonemaul()
+  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.#ctor
+  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.QuestStonemaul()
+  nameWithType: QuestStonemaul.QuestStonemaul()
 - uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.#ctor*
   name: QuestStonemaul
   href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul__ctor_
@@ -19413,32 +19413,6 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.CompletionPopup
   nameWithType: QuestStonemaul.CompletionPopup
-- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete(MacroTools.FactionSystem.Faction)
-  name: OnComplete(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul_OnComplete_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestStonemaul.OnComplete(Faction)
-- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete*
-  name: OnComplete
-  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul_OnComplete_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnComplete
-  nameWithType: QuestStonemaul.OnComplete
-- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail(MacroTools.FactionSystem.Faction)
-  name: OnFail(Faction)
-  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul_OnFail_MacroTools_FactionSystem_Faction_
-  commentId: M:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail(MacroTools.FactionSystem.Faction)
-  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail(MacroTools.FactionSystem.Faction)
-  nameWithType: QuestStonemaul.OnFail(Faction)
-- uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail*
-  name: OnFail
-  href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul_OnFail_
-  commentId: Overload:WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.OnFail
-  nameWithType: QuestStonemaul.OnFail
 - uid: WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.RewardDescription
   name: RewardDescription
   href: api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestStonemaul.html#WarcraftLegacies_Source_Quests_Frostwolf_QuestStonemaul_RewardDescription
